# wiz

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  package.json
.claude/: settings.json
.github/workflows/: ci.yml
.husky/: pre-commit
crates/wiz-core/: Cargo.toml
crates/wiz-core/src/: lib.rs  messages.rs  transform.rs
crates/wiz-frontend/: Cargo.toml  Trunk.toml
crates/wiz-frontend/src/: app.rs  app_state.rs  lib.rs  main.rs  viewport_state.rs  ws_client.rs
crates/wiz-frontend/src/panels/: displays.rs  mod.rs  performance.rs  property.rs  tf_tree.rs  topics.rs  viewport.rs
crates/wiz-frontend/web/: index.html
crates/wiz-protocol/: Cargo.toml
crates/wiz-protocol/src/: codec.rs  lib.rs
crates/wiz-renderer/: Cargo.toml
crates/wiz-renderer/src/: camera.rs  grid.rs  laser_scan.rs  lib.rs  marker.rs  pipeline.rs  point_cloud.rs  pose.rs  renderer.rs  tf_axis.rs
crates/wiz-renderer/src/shaders/: grid.wgsl  laser_scan.wgsl  marker.wgsl  point_cloud.wgsl  pose.wgsl  tf_axis.wgsl
crates/wiz-server/: Cargo.toml  build.rs
crates/wiz-server/cxx/: bridge.cpp  bridge.hpp
crates/wiz-server/src/: bridge.rs  ffi.rs  lib.rs  main.rs  mock_data.rs  state.rs  ws.rs
crates/wiz-server/tests/: e2e.rs
docker/: Dockerfile.gazebo  Dockerfile.humble  Dockerfile.jazzy  Dockerfile.ros2-example  Dockerfile.wiz-example  gazebo_entrypoint.sh  wiz_example_entrypoint.sh
examples/: README.md  ros2_publisher.py
examples/ros2/wiz_example/: CMakeLists.txt  README.md  package.xml
examples/ros2/wiz_example/config/: demo.yaml
examples/ros2/wiz_example/launch/: demo_with_wiz.launch.py
examples/ros2/wiz_example/src/: demo_marker_publisher.cpp  demo_pointcloud_publisher.cpp  demo_tf_broadcaster.cpp
ros2/wiz/: CMakeLists.txt  README.md  package.xml
ros2/wiz/config/: default.yaml
ros2/wiz/launch/: frontend.launch.py  server.launch.py  wiz.launch.py
scripts/: run-demo.sh  run-frontend.sh  run-ros2-example.sh  run-ros2-gazebo-example.sh  run-server.sh
specs/: SPECIFICATION.md  UI_UX.md
