[workspace]
resolver = "2"
members = [
    "crates/wiz-core",
    "crates/wiz-renderer",
    "crates/wiz-frontend",
    "crates/wiz-server",
    "crates/wiz-protocol",
]

[workspace.dependencies]
# Graphics
# Note: wgpu version must match eframe's internal wgpu version
wgpu = "23.0"
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts", "persistence", "x11", "wayland"] }
egui_dock = "0.15"
egui-wgpu = "0.30"

# Async
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
ewebsock = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
toml = "0.8"

# FFI
cxx = "1"
cxx-build = "1"

# Math
nalgebra = "0.33"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-web = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "js"] }
parking_lot = "0.12"

# WASM
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "=0.4.49"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/wiz"
