[package]
name = "wiz-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
