[package]
name = "wiz-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiz-core = { path = "../wiz-core" }
wiz-protocol = { path = "../wiz-protocol" }
wiz-renderer = { path = "../wiz-renderer" }

egui = { workspace = true }
eframe = { workspace = true, features = ["wgpu"] }
egui_dock = { workspace = true }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
rmp-serde = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
