[package]
name = "wiz-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiz-core = { path = "../wiz-core" }
wiz-protocol = { path = "../wiz-protocol" }
wiz-renderer = { path = "../wiz-renderer" }

egui = { workspace = true }
eframe = { workspace = true }
egui_dock = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

# Cross-platform WebSocket (works on native and WASM)
ewebsock = { workspace = true }

serde = { workspace = true }
rmp-serde = { workspace = true }

tracing = { workspace = true }
parking_lot = { workspace = true }
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
tracing-web = { workspace = true }
# For WASM, we use a minimal tracing-subscriber config (env-filter not needed)
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[lib]
crate-type = ["cdylib", "rlib"]
