[package]
name = "wiz-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiz-core = { path = "../wiz-core" }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
