[package]
name = "wiz-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiz-core = { path = "../wiz-core" }
wiz-protocol = { path = "../wiz-protocol" }
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }

# cxx = { workspace = true }

# [build-dependencies]
# cxx-build = { workspace = true }
