<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wiz</name>
  <version>0.1.0</version>
  <description>wiz - WebGPU-based ROS2 visualization tool</description>

  <maintainer email="maintainer@example.com">wiz Maintainers</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/NOPLAB/wiz</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
